# Dashboard-Siscan

./: .dockerignore  .gitignore  .replit  Dockerfile  Especificacao_Central_Inteligente_Cancer_Mama.docx  README.md  RELATORIO_ALTERACOES_MARCO_2026.md  apresentacao_ministerio.html  apresentacao_ministerio.pptx  apresentacao_ministerio_offline.html  docker-compose.yml  generate_specification.py  import_data.py  import_termo_linkage.py  main.py  pyproject.toml  replit.md  requirements.txt  usuarios_poc_siscan.xlsx
.agents/: agent_assets_metadata.toml
assets/: sidebar.css
attached_assets/: Pasted-Gere-um-sistema-de-Dashboards-Web-Interativos-MVP-utili_1764696043341.txt  Pasted-This-error-originated-from-the-built-in-JavaScript-code_1769140260152.txt  Pasted-adcione-em-todos-os-retornos-de-query-data-do-exame-res_1772678315051.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-Undefin_1768534530488.txt  UMS_x_CNES_1764704227719.csv
docs/: documentacao_banco_dados.md
scripts/: create_optimized_views.sql  create_poc_users.py  embed_images.py  gerar_pptx.py
src/: __init__.py  cache.py  callbacks.py  config.py  data_layer.py  models.py
src/components/: cards.py  charts.py  layout.py  tables.py
tests/: __init__.py  test_dashboard.py
