[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "dash>=2.18.0,<3.0.0",
    "dash-bootstrap-components>=1.5.0,<2.0.0",
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.44",
]
